# wpp-client

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  input.css  jsconfig.json  package-lock.json  package.json  rollup.config.js  tailwind.config.js
assets/: mediasoup-client.bundle.js
js/: client_msg.js  mediasoup.js
src/: components.rs  main.rs  route.rs
src/components/: avatar.rs  navbar.rs  sidebar.rs
src/pages/: home.rs  login.rs  profile.rs  register.rs
