[package]
name = "wpp-client"
version = "0.1.0"
authors = ["Marko Grizelj <marko.grizelj@gauss.dev>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6", features = ["web", "router"] }

# Debug
dioxus-logger = "0.6"

shared = { git = "https://github.com/markisha64/wpp-server" }
getrandom = { version = "0.2.15", features = ["js"] }
uuid = { version = "1.13.1", features = ["js"] }
manganis = "0.6.2"
reqwest = { version = "0.12.12", features = ["json"] }
jsonwebtoken = "9.3.1"
web-sys = { version = "0.3.77", features = ["Storage"] }
chrono = "0.4.39"

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
