[package]
name = "wpp-client"
version = "0.1.0"
authors = ["Marko Grizelj <marko.grizelj03@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6", features = ["web", "router"] }

# Debug
dioxus-logger = "0.6"

shared = { git = "https://github.com/markisha64/wpp-server" }
getrandom = { version = "0.2.15", features = ["js"] }
uuid = { version = "1.13.1", features = ["js"] }
manganis = "0.6.2"
reqwest = { version = "0.12.12", features = ["json", "multipart"] }
jsonwebtoken = "9.3.1"
web-sys = { version = "0.3.77", features = ["Storage"] }
chrono = "0.4.39"
ws_stream_wasm = "0.7.4"
pharos = "0.5.3"
futures-util = "0.3.31"
anyhow = "1.0.95"
bincode = "1.3.3"
serde_json = "1.0.138"
bson = { version = "2.13.0", features = ["chrono-0_4"] }
tokio = { version = "1.43.0", features = ["sync"] }
gloo-timers = { version = "0.3.0", features = ["futures"] }
base64 = "0.22.1"

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
